# genAI

./: .gitignore  api_call.py  gemini_by_openai_lib.py  pyproject.toml  sys.py  tokenization.py
RAG/: docker-compose.yaml  indexing.py  pdf_reader.py
hf/: gemma_hf.py
ollama-fastapi/: server.py
